objects/PC_Action_Center_Setting__mdt.object
<CustomObject>
    <description>Settings to configure Action center on program case page.</description>
    <fields>
        <fullName>PC_Action_Component_Attributes__c</fullName>
        <description>Attributes that will be passed onto the component at the time of dynamic creation.</description>
        <inlineHelpText>This must be in JSON format. 
Example {&quot;componentAttributeName1&quot;:&quot;componentAttributeValue1&quot;,&quot;componentAttributeName2&quot;:&quot;componentAttributeValue2&quot;}</inlineHelpText>
        <label>Action Component Attributes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>PC_Action_Component__c</fullName>
        <description>Component Name that should be triggered when clicked on the action</description>
        <inlineHelpText>Input the API name of the component that should be triggered when action icon is clicked.</inlineHelpText>
        <label>Action Component</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PC_Action_Icon__c</fullName>
        <defaultValue>&quot;standard:account&quot;</defaultValue>
        <description>Lightning Icon path</description>
        <inlineHelpText>Name of the Lightning Icon. Refer Icons section on Salesforce Lightning Design System. 
Sample Input -  standard-account</inlineHelpText>
        <label>Action Icon</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PC_Action_Label__c</fullName>
        <description>Label of the action icon that will be visible on the action center. You may also specify the fully qualified custom label path ($Label.namespace.labelName).</description>
        <inlineHelpText>Label of the action icon that will be visible on the action center. You may also specify the fully qualified custom label path ($Label.namespace.labelName).</inlineHelpText>
        <label>Action Label</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PC_Action_Ordinal__c</fullName>
        <description>Order in which the Action should be displayed</description>
        <label>Action Ordinal</label>
        <precision>2</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PC_Action_Type__c</fullName>
        <description>Type of Action Selected</description>
        <label>Action Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Communications</fullName>
                    <default>true</default>
                    <label>Communications</label>
                </value>
                <value>
                    <fullName>Workflows</fullName>
                </value>
                <value>
                    <fullName>Tools</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PC_Active__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Should be checked if the Action needs to be displayed</description>
        <inlineHelpText>Should be checked if the Action needs to be displayed</inlineHelpText>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PC_Case_Record_Type__c</fullName>
        <description>Record type associated with the case type where the action should be displayed</description>
        <inlineHelpText>Select the record type of the case to which the action should be associated with. If record type is not present add it to the picklist of the metadata before adding the record.</inlineHelpText>
        <label>Case Record Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>All</fullName>
                </value>
                <value>
                    <fullName>PC_Program</fullName>
                    <default>true</default>
                    <label>PC_Program</label>
                </value>
                <value>
                    <fullName>PC_PAP</fullName>
                </value>
                <value>
                    <fullName>PC_BIBV</fullName>
                </value>
                <value>
                    <fullName>PC_Benefits_Investigation_Benefits_Verification</fullName>
                </value>
                <value>
                    <fullName>PC_Copay</fullName>
                </value>
                <value>
                    <fullName>PC_Prior_Authorization</fullName>
                </value>
                <value>
                    <fullName>PC_Alternate_Funding</fullName>
                </value>
                <value>
                    <fullName>PC_Appeal</fullName>
                </value>
                <value>
                    <fullName>PC_Enrollment</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PC_Case_Recordtype_Namespaceprefix__c</fullName>
        <description>The field describes the namespace prefix for case record type.</description>
        <inlineHelpText>Namespace of record type</inlineHelpText>
        <label>Case Record Type Namespace Prefix</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PC_Engagement_Program_Code__c</fullName>
        <description>Engagement program code that maps to the Engagement program the action is associated to.</description>
        <inlineHelpText>Enter the program code for the Engagement Program</inlineHelpText>
        <label>Engagement Program Code</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PC_Other_Case_Record_Type__c</fullName>
        <description>Enter Case record type when Other is selected as Case Record Type.</description>
        <inlineHelpText>Enter Case record type when Other is selected as Case Record Type.</inlineHelpText>
        <label>Other Case Record Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Action Center Setting</label>
    <pluralLabel>Action Center Settings</pluralLabel>
</CustomObject>